tests/NormalTests/paczka1/fuzzy1/67311679.err
Error in line 4: Ueik8Al A86 17,2
Error in line 9: Ueik8Al A712 1,3
Error in line 15: cx38KPXt S684 -1,5
Error in line 22: A712 S875 92,8
Error in line 19: cx38KPXt S684 15,6
Error in line 27: cx38KPXt A712 30,3
Error in line 31: ow7Ex2oocM A712 66,1
Error in line 33: ow7Ex2oocM A86 44,6
